tree-sitter-outrun/grammar.js
    source_file: $ => repeat($.item),

    // Top-level items
    item: $ => choice(
      $.struct_definition,
      $.trait_definition,
      $.impl_block,
      $.function_definition,
      $.constant_definition,
      $.let_binding,
      $.alias_definition,
      $.macro_definition,
      $.import_definition
    ),

    // Comments
    impl_block: $ => seq(
      'impl',
      optional($.generic_params),
      $.trait_spec,
      'for',
      $.type_spec,
      optional($.trait_constraints),
      '{',
      repeat($.function_definition),
      '}'
    ),

    trait_spec: $ => seq(
      $.module_path,
      optional($.generic_args)
    ),

    type_spec: $ => seq(
      $.module_path,
      optional($.generic_args)
    ),

    // Function Definition
    function_definition: $ => seq(
      repeat($.attribute),
      choice('def', 'defp'),
      $.identifier,
      '(',
      optional($.parameter_list),
      ')',
      optional($.return_type),
      optional($.guard_clause),
      $.block
    ),

    parameter_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(',')
    ),

    parameter: $ => seq(
      $.identifier,
      ':',
      $.type_annotation
    ),

    return_type: $ => seq(':', $.type_annotation),

    // Guard System
    generic_params: $ => seq(
      '<',
      $.generic_param,
      repeat(seq(',', $.generic_param)),
      optional(','),
      '>'
    ),

    generic_param: $ => $.type_identifier,

    generic_args: $ => seq(
      '<',
      $.type_annotation,
      repeat(seq(',', $.type_annotation)),
      optional(','),
      '>'
    ),

    // Types
    type_annotation: $ => choice(
      seq($.module_path, optional($.generic_args)),
      $.tuple_type,
      $.function_type,
      'Self'
    ),

    tuple_type: $ => seq(
      '(',
      optional(seq(
        $.type_annotation,
        repeat(seq(',', $.type_annotation)),
        optional(',')
      )),
      ')'
    ),

    module_path: $ => seq(
      $.type_identifier,
      repeat(seq('.', $.type_identifier))
    ),

    // Macro Definition
    expression: $ => $._pipe_expression,

    _pipe_expression: $ => prec.left(1, choice(
      $._logical_or_expression,
      $.pipe_expression
    )),

    _additive_expression: $ => prec.left(10, choice(
      $._multiplicative_expression,
      $.binary_add,
      $.binary_subtract
    )),

    binary_add: $ => prec.left(10, seq($._additive_expression, '+', $._multiplicative_expression)),
    _multiplicative_expression: $ => prec.left(11, choice(
      $._exponentiation_expression,
      $.binary_multiply,
      $.binary_divide,
      $.binary_modulo
    )),

    _unary_expression: $ => choice(
      $._postfix_expression,
      $.unary_plus,
      $.unary_minus,
      $.unary_not,
      $.unary_complement
    ),

    unary_minus: $ => prec(13, seq('-', $._unary_expression)),
    field_access: $ => seq('.', $.identifier),
    function_call: $ => prec(1, seq(
      optional(seq($.module_path, '.')),
      $.identifier,
      '(',
      optional($.argument_list),
      ')'
    )),
    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.module_path,
      $.function_call,
      $.function_capture,
      seq('(', $.expression, ')'),
      $.if_expression,
      $.case_expression,
      $.anonymous_function,
      $.struct_literal,
      $.list_literal,
      $.tuple_literal,
      $.map_literal,
      $.macro_injection
    ),

    argument_list: $ => seq(
      $.argument,
      repeat(seq(',', $.argument)),
      optional(',')
    ),

    argument: $ => choice(
      $.spread_argument,
      $.named_argument,
      $.shorthand_argument
    ),

    spread_argument: $ => choice(
      seq('..', $.expression),
      seq(token('..?'), $.expression)
    ),

    named_argument: $ => seq(
      $.identifier,
      ':',
      $.expression
    ),

    shorthand_argument: $ => $.identifier,

    // Literals
    literal: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.multiline_string,
      $.atom,
      $.sigil,
      $.boolean
    ),

    integer: $ => choice(
      /[0-9]+/,                    // Decimal
      /0b[01]+/,                   // Binary
      /0o[0-7]+/,                  // Octal
      /0x[0-9a-fA-F]+/            // Hexadecimal
    ),

    float: $ => /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,

    string: $ => seq(
      '"',
      repeat(choice(
        $.interpolation,
        $.escape_sequence,
        $.string_content
      )),
      '"'
    ),

    string_content: $ => token.immediate(/[^"\\#]+/),
    
    escape_sequence: $ => token.immediate(/\\./),

    interpolation: $ => seq('#{', $.expression, '}'),

    multiline_string: $ => seq(
      '"""',
      repeat(choice(
        $.multiline_string_content,
        $.interpolation
      )),
      '"""'
    ),

    multiline_string_content: $ => token.immediate(/[^#"]+|"[^"]*"|""[^"]/),

    atom: $ => seq(
      ':',
      choice(
        $.identifier,
        $.string
      )
    ),

    boolean: $ => choice('true', 'false'),

    // Collection Literals
    list_literal: $ => seq(
      '[',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(',')
      )),
      ']'
    ),

    tuple_literal: $ => choice(
      // Empty tuple
      seq('(', ')'),
      // Single element tuple (requires trailing comma)
      seq('(', $.expression, ',', ')'),
      // Multi-element tuple
      seq(
        '(',
        $.expression,
        repeat1(seq(',', $.expression)),
        optional(','),
        ')'
      )
    ),

    struct_literal: $ => prec(1, seq(
      $.module_path,
      '{',
      optional($.struct_literal_fields),
      '}'
    )),

    struct_literal_fields: $ => choice(
      seq(
        $.struct_literal_field,
        repeat(seq(',', $.struct_literal_field)),
        optional(','),
        optional(seq(',', $.struct_update))
      ),
      $.struct_update
    ),

    struct_literal_field: $ => choice(
      $.struct_field_assignment,
      $.struct_field_shorthand
    ),

    struct_field_assignment: $ => seq(
      $.identifier,
      ':',
      $.expression
    ),

    block: $ => seq('{', repeat($.statement), '}'),

    statement: $ => choice(
      $.expression,
      $.let_binding,
      $.constant_definition
    ),

    // Variable Binding
    let_binding: $ => seq(
      'let',
      choice(
        seq($.identifier, ':', $.type_annotation, '=', $.expression),
        seq($.identifier, '=', $.expression),
        seq($.destructure_pattern, '=', $.expression)
      )
    ),

    destructure_pattern: $ => choice(
      $.tuple_destructure,
      $.struct_destructure,
      $.list_destructure
    ),

    constant_definition: $ => seq(
      repeat($.attribute),
      'const',
      $.type_identifier,
      ':',
      $.type_annotation,
      '=',
      $.expression
    ),

    // Aliases
    identifier: $ => /[a-z_][a-zA-Z0-9_]*\??/,
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/
  }
});
