tree-sitter-outrun/test/corpus/functions_spread_basic.txt
================
Basic spread argument
================

let result = process_user(..login_result)

---

(source_file
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (identifier))))))))))))
