tree-sitter-outrun/test/corpus/functions_spread_complex_expression.txt
================
Spread with complex expression
================

let result = process_user(..User.authenticate(credentials))

---

(source_file
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (function_call
                        (module_path
                          (type_identifier))
                        (identifier)
                        (argument_list
                          (argument
                            (shorthand_argument
                              (identifier))))))))))))))))
