tree-sitter-outrun/test/corpus/functions_spread_lenient.txt
================
Lenient spread argument
================

let result = process_user(..?user_data)

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (identifier))))))))))))
