tree-sitter-outrun/test/corpus/functions_spread_mixed_args.txt
================
Mixed spread and explicit arguments
================

let result = process_user(..login_result, timestamp: custom_time)

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (identifier)))))
              (argument
                (named_argument
                  (identifier)
                  (expression
                    (primary_expression
                      (identifier))))))))))))
