tree-sitter-outrun/test/corpus/functions_spread_multiple.txt
================
Multiple spread arguments
================

let account = create_account(..signup_data, ..preferences, ..metadata)

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (function_call
            (identifier)
            (argument_list
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (identifier)))))
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (identifier)))))
              (argument
                (spread_argument
                  (expression
                    (primary_expression
                      (identifier))))))))))))
