tree-sitter-outrun/test/corpus/functions_spread_qualified_call.txt
================
Spread in qualified function call
================

let user = User.create(..signup_data, active: true)

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (identifier))
        (function_call_postfix
          (identifier)
          (argument_list
            (argument
              (spread_argument
                (expression
                  (primary_expression
                    (identifier)))))
            (argument
              (named_argument
                (identifier)
                (expression
                  (primary_expression
                    (literal
                      (boolean))))))))))))
