tree-sitter-outrun/test/corpus/literals_atoms.txt
================
Simple atom
================

const ATOM_TEST: Atom = :name

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (atom
              (identifier))))))))

================
Atom with underscore
================

const USER_ID: Atom = :user_id

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (atom
              (identifier))))))))

================
Atom with string content
================

const COMPLEX_ATOM: Atom = :"arbitrary string"

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (atom
              (string
                (string_content)))))))))

================
Atom with spaces and symbols
================

const SPECIAL_ATOM: Atom = :"with spaces and symbols!"

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (atom
              (string
                (string_content)))))))))
