tree-sitter-outrun/test/corpus/literals_booleans.txt
================
Boolean true
================

const TRUE_VAL: Boolean = true

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (boolean)))))))

================
Boolean false
================

const FALSE_VAL: Boolean = false

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (boolean)))))))
