tree-sitter-outrun/test/corpus/literals_floats_negative.txt
================
Negative float
================

const NEGATIVE_PI: Float = -3.14

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (unary_minus
          (primary_expression
            (literal
              (float))))))))
