tree-sitter-outrun/test/corpus/literals_floats_positive.txt
================
Positive float
================

const PI: Float = 3.14

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (float)))))))
