tree-sitter-outrun/test/corpus/literals_floats_scientific.txt
================
Scientific notation float
================

def avogadro(): Float {
    6.022e23
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (float)))))))))
