tree-sitter-outrun/test/corpus/literals_integers_binary.txt
================
Binary integer
================

const BINARY: Integer = 0b1010

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (integer)))))))
