tree-sitter-outrun/test/corpus/literals_integers_large.txt
================
Large integer literals
================

def very_large_number(): Integer {
    123456789012345678901234567890
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (integer)))))))))
