tree-sitter-outrun/test/corpus/literals_integers_negative.txt
================
Negative integer
================

const NEGATIVE: Integer = -42

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (unary_minus
          (primary_expression
            (literal
              (integer))))))))
