tree-sitter-outrun/test/corpus/literals_integers_octal.txt
================
Octal integer
================

def permissions(): Integer {
    0o755
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (integer)))))))))
