tree-sitter-outrun/test/corpus/literals_integers_positive.txt
================
Positive decimal integer
================

const DECIMAL: Integer = 42

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (integer)))))))
