tree-sitter-outrun/test/corpus/literals_strings_basic.txt
================
Basic string
================

const GREETING: String = "Hello, world!"

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (string
              (string_content))))))))
