tree-sitter-outrun/test/corpus/literals_strings_empty.txt
================
Empty string
================

const EMPTY: String = ""

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (string)))))))
