tree-sitter-outrun/test/corpus/literals_strings_interpolation.txt
================
String with simple interpolation
================

const GREETING: String = "Hello, #{name}!"

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (string
              (string_content)
              (interpolation
                (expression
                  (primary_expression
                    (identifier))))
              (string_content))))))))

================
String with complex interpolation
================

const MESSAGE: String = "User #{user.name} has #{user.posts.count} posts"

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (string
              (string_content)
              (interpolation
                (expression
                  (primary_expression
                    (identifier))
                  (field_access
                    (identifier))))
              (string_content)
              (interpolation
                (expression
                  (primary_expression
                    (identifier))
                  (field_access
                    (identifier))
                  (field_access
                    (identifier))))
              (string_content))))))))

================
String with expression interpolation
================

const RESULT: String = "The result is #{x + y}!"

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (string
              (string_content)
              (interpolation
                (expression
                  (binary_add
                    (primary_expression
                      (identifier))
                    (primary_expression
                      (identifier)))))
              (string_content))))))))
