tree-sitter-outrun/test/corpus/literals_strings_multiline_basic.txt
================
Basic multi-line string
================

let text = """
Multi-line string
can span multiple lines
"""

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (literal
            (multiline_string
              (multiline_string_content))))))))
