tree-sitter-outrun/test/corpus/literals_strings_multiline_empty.txt
================
Empty multi-line string
================

let text = """"""

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (literal
            (multiline_string)))))))
