tree-sitter-outrun/test/corpus/literals_strings_multiline_interpolation.txt
================
Multi-line string with interpolation
================

let message = """
Hello, #{user.name}!
Your account has #{account.balance} credits.
"""

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (literal
            (multiline_string
              (multiline_string_content)
              (interpolation
                (expression
                  (primary_expression
                    (identifier))
                  (field_access
                    (identifier))))
              (multiline_string_content)
              (interpolation
                (expression
                  (primary_expression
                    (identifier))
                  (field_access
                    (identifier))))
              (multiline_string_content))))))))
