tree-sitter-outrun/test/corpus/literals_strings_multiline_quotes.txt
================
Multi-line string with quotes inside
================

let text = """
This is a "quoted" string.
It can contain 'single' and "double" quotes.
"""

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (literal
            (multiline_string
              (multiline_string_content)
              (multiline_string_content)
              (multiline_string_content)
              (multiline_string_content)
              (multiline_string_content))))))))
